bin/tests/snapshots/single_use_let__fix_005d426038808a913c1803920cbd55a876a173f171710f6910fbac295de221c9.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  attrs = { a = 1; };\\nin\\n  { inherit (attrs) a; }\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,2 @@
-let
-  attrs = { a = 1; };
-in
-  { inherit (attrs) a; }
+{ inherit ({ a = 1; }) a; }
