bin/tests/snapshots/single_use_let__fix_54c4d170d8a4e6fa8380f6ba6079efaf4ec746bcfdf8f30fe392cd9d534c82c7.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  x = someExpr;\\nin\\n  \\\"value: ${x}\\\"\\n\""
---

