bin/tests/snapshots/single_use_let__fix_a73466e782cef2cb9b24807142e9e7883dddfc3f0dfb18395c443ca004a74cd6.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  x = 1;\\nin\\n  { inherit x y; }\\n\""
---

