bin/tests/snapshots/single_use_let__fix_d5a615826b6764d9338ae9c0e029bd90514224099c7f8a0daa6d1c513ef2548e.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  x = 1;\\nin\\n  null\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,2 @@
-let
-  x = 1;
-in
-  null
+null
