bin/tests/snapshots/single_use_let__fix_debab6b8508d37c6042b6a1a4f8fe9879e267d993159dfe58798a11b50447ebd.snap
---
source: bin/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  settings =\\n    {\\n      a = 1;\\n      b = 2;\\n    };\\nin\\n  { inherit settings; }\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,9 +1,5 @@
-let
-  settings =
-    {
+{ settings = {
       a = 1;
       b = 2;
-    };
-in
-  { inherit settings; }
+    }; }
