bin/tests/snapshots/single_use_let__fix_f4080a80fdd4a6851339271c533b8d35fae8d72c5f1a55837b4bf87662661829.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  x = pkgs.hello;\\nin\\n  x.meta.description\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,2 @@
-let
-  x = pkgs.hello;
-in
-  x.meta.description
+pkgs.hello.meta.description
