bin/tests/snapshots/single_use_let__fix_f5d3f866086eaa7b1e4faa30c84b66b4f8a6613afe8b211c9532c3a63c2ead81.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  x = 1;\\nin\\n  { inherit x; }\\n\""
---

