bin/tests/snapshots/single_use_let__fix_fe35e07763e86e348e906827fa01efe454c9208bd39ccf21458adb38987630f5.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  dev = \\\"/dev/sda\\\";\\nin\\n  ''mount ${dev} /mnt''\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,2 @@
-let
-  dev = "/dev/sda";
-in
-  ''mount ${dev} /mnt''
+''mount /dev/sda /mnt''
