bin/tests/snapshots/single_use_let__lint_005d426038808a913c1803920cbd55a876a173f171710f6910fbac295de221c9.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  attrs = { a = 1; };\\nin\\n  { inherit (attrs) a; }\\n\""
---
[W30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   attrs = { a = 1; };
   ·   ─────────┬─────────  
   ·            ╰─────────── attrs is only used once; consider inlining
 4 │   { inherit (attrs) a; }
   ·              ──┬──  
   ·                ╰──── attrs is only used once; consider inlining
───╯
